Rename main js to script js

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!-- <audio autoplay loop
         src="audio/y2mate.com - Aaj Ki Raat  Stree 2  Tamannaah Bhatia  SachinJigar  Madhubanti  Divya  Amitabh  15th August.mp3"></audio> -->
-    <script src="main.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
