Home page is complete

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#" style="--i:5">contact</a>
         </nav>
     </header>
+
     <section class="home">
         <div class="home-content">
             <h3>Hello, It's Me</h3>
@@ -39,6 +40,27 @@
                 <a href="#" style="--i:9"><i class='bx bxl-whatsapp'></i></a>
                 <a href="#" style="--i:10"><i class='bx bxl-github'></i></a>
             </div>
+            <a href="#" class="btn-box">More About Me</a>
+        </div>
+        <span class="home-imgHover"></span>
+    </section>
+
+
+
+
+
+
+
+<!-- About Section -->
+
+    <section id="about" class="about">
+        <div class="about-img">
+            <img src="image/background 1.png">
+        </div>
+        <div class="about-text">
+            <h2>About <span>Me</span></h2>
+            <h4>Full Stack Developer!</h4>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, quas. Officiis minima amet temporibus cupiditate consequuntur sed nesciunt illo autem assumenda! Amet doloremque quae fugit! Eos voluptates eaque, aut ea officiis recusandae. Odio, consectetur tempora neque sint distinctio corrupti! Deleniti temporibus fuga ex alias architecto nisi, rerum hic iusto blanditiis voluptates asperiores deserunt tempora quia officiis reprehenderit? Dolorum inventore reprehenderit sunt expedita et? Eos eveniet minus id molestias incidunt, adipisci enim rerum dolorem quis vel voluptates, ullam praesentium? Suscipit, quos commodi velit similique tempora, cumque ducimus eveniet debitis rem a ab nobis. Nesciunt voluptatibus optio tempore, sequi dolore quaerat culpa debitis quod maiores eligendi et rem odio aliquid rerum harum nostrum, repellendus in blanditiis explicabo voluptas quia nam. Illum, quod rerum quasi et dignissimos tempora, accusantium deserunt, assumenda quos laborum itaque natus non voluptate consequuntur mollitia asperiores voluptates voluptatibus consectetur impedit similique.</p>
             <a href="#" class="btn-box">More About Me</a>
         </div>
     </section>
