--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 
         <nav class="navbar">
             <a href="#" style="--i:1" class="active">Home</a>
-            <a href="#" style="--i:2">About</a>
-            <a href="#" style="--i:3">Skill</a>
+            <a href="#about" style="--i:2">About</a>
+            <a href="#" style="--i:3">Skills</a>
             <a href="#" style="--i:4">Portfolio</a>
             <a href="#" style="--i:5">contact</a>
         </nav>
     </header>
+
+
+    <!-- Home Section -->
+
 
     <section class="home">
         <div class="home-content">
@@ -46,12 +50,8 @@
     </section>
 
 
-
-
-
-
-
     <!-- About Section -->
+
 
     <section id="about" class="about">
         <div class="about-img">
@@ -60,18 +60,55 @@
         <div class="about-text">
             <h2>About <span>Me</span></h2>
             <h4>Full Stack Developer!</h4>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id, quas. Officiis minima amet temporibus
-                cupiditate consequuntur sed nesciunt illo autem assumenda! Amet doloremque quae fugit! Eos voluptates
-                eaque, aut ea officiis recusandae. Odio, consectetur tempora neque sint distinctio corrupti! Deleniti
-                temporibus fuga ex alias architecto nisi, rerum hic iusto blanditiis voluptates asperiores deserunt
-                tempora quia officiis reprehenderit? Dolorum inventore reprehenderit sunt expedita et? Eos eveniet minus
-                id molestias incidunt, adipisci enim rerum dolorem quis vel voluptates, ullam praesentium? Suscipit,
-                quos commodi velit similique tempora, cumque ducimus eveniet debitis rem a ab nobis. Nesciunt
-                voluptatibus optio tempore, sequi dolore quaerat culpa debitis quod maiores eligendi et rem odio aliquid
-                rerum harum nostrum, repellendus in blanditiis explicabo voluptas quia nam. Illum, quod rerum quasi et
-                dignissimos tempora, accusantium deserunt, assumenda quos laborum itaque natus non voluptate
-                consequuntur mollitia asperiores voluptates voluptatibus consectetur impedit similique.</p>
+            <p>I am a skilled web designer with over 3 years of experience in the industry. My passion lies in creating
+                captivating website designs and implementing them through frontend development. Itake pride in staying
+                up-to-date with current design trends and leveraging my creativity to produce visually appealing and
+                user-friendly websites. Throughout my career, I have developed a deep understanding of user experience
+                (UX) and user interface (UI) principles. By putting myself in the shoes of the end-users, I strive to
+                create intuitive and seamless browsing experiences. I believe that a well-designed website should not
+                only look visually appealing but also provide a smooth and enjoyable interaction for visitors. When
+                starting a new project, I thoroughly research and analyze the target audience and the client's specific
+                requirements. This enables me to tailor my designs to meet their expectations and deliver a unique
+                online presence that aligns with their brand identity..</p>
             <a href="#" class="btn-box">More About Me</a>
+        </div>
+    </section>
+
+
+    <!-- Skills Section -->
+
+
+    <section>
+        <div class="services" id="services">
+            <div class="container">
+                <h1 class="sub-title">My <span>services</span></h1>
+                <div class="services-list">
+                    <div>
+                        <i class=""></i>
+                        <h2>UI/UX Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quis neque dicta explicabo
+                            velit similique delectus, mollitia error quod, ab cum non, blanditiis commodi voluptate et
+                            veritatis repellendus officiis iusto?</p>
+                        <a href="#" class="read">lern more</a>
+                    </div>
+                    <div>
+                        <i class=""></i>
+                        <h2>UI/UX Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quis neque dicta explicabo
+                            velit similique delectus, mollitia error quod, ab cum non, blanditiis commodi voluptate et
+                            veritatis repellendus officiis iusto?</p>
+                        <a href="#" class="read">lern more</a>
+                    </div>
+                    <div>
+                        <i class=""></i>
+                        <h2>UI/UX Design</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit quis neque dicta explicabo
+                            velit similique delectus, mollitia error quod, ab cum non, blanditiis commodi voluptate et
+                            veritatis repellendus officiis iusto?</p>
+                        <a href="#" class="read">lern more</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -87,21 +124,8 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- <audio autoplay loop
-        src="audio/y2mate.com - Aaj Ki Raat  Stree 2  Tamannaah Bhatia  SachinJigar  Madhubanti  Divya  Amitabh  15th August.mp3"></audio> -->
+    <audio autoplay loop
+        src="audio/y2mate.com - Aaj Ki Raat  Stree 2  Tamannaah Bhatia  SachinJigar  Madhubanti  Divya  Amitabh  15th August.mp3"></audio>
     <script src="script.js"></script>
 </body>
 
